Prevent tags/pills from jumping when the proper border is displayed

--- a/frontend/src/app/score-board-preview/score-board-preview.component.scss
+++ b/frontend/src/app/score-board-preview/score-board-preview.component.scss
@@ -67,7 +67,7 @@
   .tag {
     padding: 8px 16px;
     cursor: pointer;
-    border: none;
+    border: 1px solid transparent;
 
     font-weight: 600;
     font-size: 14px;
